# rust-project

./: .env  .env.example  Cargo.toml  README.md
migrations/2022-07-22-110925_books/: up.sql
migrations/2022-07-22-111004_users/: up.sql
migrations/2022-07-22-111048_loans/: up.sql
migrations/2022-08-03-110050_user_add_deleted_and_updated_at_trigger/: down.sql  up.sql
src/: db_utils.rs  errors.rs  main.rs  schema.rs  validation.rs
src/application/: mod.rs
src/custom_errors/: app_error.rs
src/models/: book.rs  loan.rs  mod.rs  user.rs
src/models/authentication/: auth.rs  jwt.rs  mod.rs
src/routes/: books.rs  loans.rs  login.rs  mod.rs  register.rs  users.rs
src/routes/auth/: login.rs  register.rs
src/routes/books/: index.rs  mod.rs
src/routes/books/search/: author.rs  mod.rs  publisher.rs  title.rs
src/routes/loans/: create.rs  index.rs  mod.rs  return_loan.rs  status.rs
src/routes/users/: delete.rs  index.rs  loans.rs  mod.rs
src/validation/: book_validation.rs  loan_validation.rs  mod.rs  user_validation.rs
