[package]
name = "project-library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.8", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
actix-web = "4.1.0"
actix-rt = "2.7.0"
chrono = {version = "0.4.19", features=["serde"]}
bcrypt = "0.13.0"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"
jsonwebtoken = "8.1.1"
validator = { version = "0.16.0", features = ["derive"] }
passwords = "3.1.9"
derive_more = "0.99.17"

[dependencies.uuid]
version = "1.1.2"
features = [
    "serde",
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]